--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/TesslaRay/ioled-monolith#readme",
   "dependencies": {
-    "@google-cloud/firestore": "^3.5.1",
     "@google-cloud/iot": "^1.5.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -31,6 +30,7 @@
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "firebase-admin": "^8.12.1",
     "googleapis": "^46.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
