--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ioled API",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent",
     "start": "node src/start.js"
   },
   "repository": {
