--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,3 +10,8 @@ jobs:
         run: yarn
       - name: Run tests
         run: yarn test
+        env:
+          JWT_KEY: ${{secrets.JWT_KEY}}
+          GOOGLE_CLIENT_SECRET: ${{secrets.GOOGLE_CLIENT_SECRET}}
+          GOOGLE_CLIENT_ID: ${{secrets.GOOGLE_CLIENT_ID}}
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
