--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ab307e",
-    "activityBar.activeBorder": "#25320e",
-    "activityBar.background": "#ab307e",
+    "activityBar.activeBackground": "#a651cc",
+    "activityBar.activeBorder": "#d4b36b",
+    "activityBar.background": "#a651cc",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#25320e",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#832561",
-    "statusBar.border": "#832561",
+    "activityBarBadge.background": "#d4b36b",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#8e35b6",
+    "statusBar.border": "#8e35b6",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ab307e",
-    "titleBar.activeBackground": "#832561",
+    "statusBarItem.hoverBackground": "#a651cc",
+    "titleBar.activeBackground": "#8e35b6",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#832561",
-    "titleBar.inactiveBackground": "#83256199",
+    "titleBar.border": "#8e35b6",
+    "titleBar.inactiveBackground": "#8e35b699",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#832561",
+  "peacock.color": "#8e35b6",
   "editor.formatOnSave": true
 }
