--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ioled-monolith",
+  "name": "ioled-antu",
   "version": "1.0.0",
   "description": "ioled API",
   "main": "index.js",
@@ -26,20 +26,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "*",
+    "express-handlebars": "^5.0.0",
     "express-messages": "*",
     "express-session": "*",
-    "express-validator": "*",
-    "firebase-admin": "^8.12.1",
+    "express-validator": "^6.6.0",
+    "firebase-admin": "^8.13.0",
     "googleapis": "^46.0.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "supertest": "^4.0.2"
   }
 }
