--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TesslaRay/ioled-monolith#readme",
   "dependencies": {
+    "@google-cloud/bigquery": "^5.0.1",
     "@google-cloud/iot": "^1.5.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -34,6 +35,7 @@
     "googleapis": "^46.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   },
